fix features position on mobile

--- a/styles/honey.css
+++ b/styles/honey.css
@@ -395,14 +395,16 @@ section.features-section .content {
 section.features-section .features-content {
   max-width: 1100px;
   margin: auto;
-  overflow: hidden;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%); }
+  overflow: hidden; }
+  @media (min-width: 700px) and (min-height: 500px) {
+    section.features-section .features-content {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%); } }
   section.features-section .features-content:after {
     display: none; }
   @media (max-width: 699px), (max-height: 499px) {
